--- a/lesson2/index.html
+++ b/lesson2/index.html
@@ -1,10 +1,31 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+<div class="blue_blocks">
+    <div class="widgets">
+Widgets
+    </div>
+
+    <div class="widgets-box">
+        <div class="widget">Big Widgets</div>
+        <div class="widget">Bigger Widgets</div>
+        <div class="widget">Huge Widgets</div>
+    </div>
+
+    <div class="contacts">
+Contact
+    </div>
+
+</div>
 
 </body>
 </html>
